# wnewtype

./: Cargo.toml  LICENSE-MIT  LICENSE.md  README.md
derive-newtype/: Cargo.toml
derive-newtype/src/: lib.rs
derive-wnewtype/: Cargo.toml
derive-wnewtype/src/: lib.rs  zdcz.rs
src/: lib.rs
tests/: smoke.rs
