[workspace]

[package]
name = "wnewtype"
version = "0.0.1"
authors = ["worksoup"]
edition = "2021"
license = "MIT"
description = "快捷实现 newtype 模式。"
documentation = "https://docs.rs/wnewtype"
repository = "https://github.com/worksoup/wnewtype"

[dependencies]
derive-wnewtype = { path = "derive-wnewtype" }
