[package]
name = "derive-wnewtype"
version = "0.0.1"
authors = ["worksoup"]
edition = "2021"
license = "MIT"
description = "`wnewtype` 实现。"
documentation = "https://docs.rs/derive-wnewtype"
repository = "https://github.com/worksoup/wnewtype"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "2"
quote = "1"
